# SecurityEngineeringPlatform

./: .env.example  .gitignore  .gitleaks.toml  README.md  docker-compose.yml  package-lock.json
.github/workflows/: ci.yml
dashboard/: Dockerfile  index.html  package-lock.json  package.json  vite.config.js
dashboard/src/: App.jsx  styles.css
dashboard/src/hooks/: useDashboardActions.js
dashboard/src/lib/: alertDerivations.js  analytics.js  authStorage.js  formatters.js  useDashboardActions.js
engine/: Dockerfile  requirements.txt
engine/src/: app.py  detection_engine.py
python_engine/: Dockerfile
python_engine/src/: app.py  crypto_core_client.py  detection_engine.py
scripts/: simulate_attack.ps1  trigger_all_alerts.ps1  trigger_all_alerts_kali.sh
security_core/: CMakeLists.txt  Dockerfile  crypto_engine.cpp  crypto_engine.h  crypto_engine.hpp  file_crypto.cpp  file_crypto.h  main.cpp  token_service.cpp  token_service.h  token_service.hpp  utils.cpp  utils.h  utils.hpp
waf/: modsecurity-override.conf
webapp/: Dockerfile  package.json  pl8wzQqdSXpVKakA7KPkmMAa0ZaTPG6COTa3dNoK.tmp
webapp/data/: blocklist.json  refreshTokens.json  users.json
webapp/logs/: alerts.json  timeline.json
webapp/public/: app.js  index.html  styles.css
webapp/src/: server.js
webapp/src/middleware/: auth.js  loginProtection.js  rbac.js  threatControls.js  validation.js
webapp/src/routes/: apiRoutes.js  authRoutes.js
webapp/src/services/: cryptoCoreClient.js  db.js  settingsStore.js  userStore.js
webapp/src/utils/: logger.js
(+6 files in other folders)
